--- a/W3SavegameEditor/W3SavegameEditor.csproj
+++ b/W3SavegameEditor/W3SavegameEditor.csproj
@@ -50,11 +50,16 @@
     <Compile Include="ChunkedLz4\ChunkedLz4FileHeader.cs" />
     <Compile Include="ChunkedLz4\ChunkedLz4FileTable.cs" />
     <Compile Include="ChunkedLz4\Lz4Chunk.cs" />
+    <Compile Include="ExtensionMethods.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Savegame\SavegameFile.cs" />
+    <Compile Include="Savegame\SavegameVariableTableEntry.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="App.config" />
+    <None Include="App.config">
+      <SubType>Designer</SubType>
+    </None>
     <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
