--- a/W3SavegameEditor/W3SavegameEditor.csproj
+++ b/W3SavegameEditor/W3SavegameEditor.csproj
@@ -50,11 +50,20 @@
     <Compile Include="ChunkedLz4\ChunkedLz4FileHeader.cs" />
     <Compile Include="ChunkedLz4\ChunkedLz4FileTable.cs" />
     <Compile Include="ChunkedLz4\Lz4Chunk.cs" />
+    <Compile Include="Exceptions\ParseVariableException.cs" />
     <Compile Include="ExtensionMethods.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Savegame\SavegameFile.cs" />
-    <Compile Include="Savegame\SavegameVariableTableEntry.cs" />
+    <Compile Include="Savegame\VariableTableEntry.cs" />
+    <Compile Include="Savegame\VariableParser.cs" />
+    <Compile Include="Savegame\VariableParsers\BrVariableParser.cs" />
+    <Compile Include="Savegame\VariableParsers\BsVariableParser.cs" />
+    <Compile Include="Savegame\VariableParsers\ManuVariableParser.cs" />
+    <Compile Include="Savegame\VariableParsers\OpVariableParser.cs" />
+    <Compile Include="Savegame\VariableParsers\SsVariableParser.cs" />
+    <Compile Include="Savegame\VariableParsers\VariableParserBase.cs" />
+    <Compile Include="Savegame\VariableParsers\VlVariableParser.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config">
