--- a/W3SavegameEditor/W3SavegameEditor.csproj
+++ b/W3SavegameEditor/W3SavegameEditor.csproj
@@ -54,6 +54,11 @@
     <Compile Include="ExtensionMethods.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Savegame\Values\EntityHandle.cs" />
+    <Compile Include="Savegame\Values\EulerAngles.cs" />
+    <Compile Include="Savegame\Values\IdTag.cs" />
+    <Compile Include="Savegame\Values\TagList.cs" />
+    <Compile Include="Savegame\Values\W3Enum.cs" />
     <Compile Include="Savegame\VariableParsers\AvalVariableParser.cs" />
     <Compile Include="Savegame\VariableParsers\BlckVariableParser.cs" />
     <Compile Include="Savegame\Variables\AvalVariable.cs" />
@@ -63,10 +68,11 @@
     <Compile Include="Savegame\Variables\OpVariable.cs" />
     <Compile Include="Savegame\Variables\SsVariable.cs" />
     <Compile Include="Savegame\Variables\TypedVariable.cs" />
-    <Compile Include="Savegame\Variables\VariableComposite.cs" />
+    <Compile Include="Savegame\Variables\VariableSet.cs" />
     <Compile Include="Savegame\SavegameFile.cs" />
     <Compile Include="Savegame\Variables\UnknownVariable.cs" />
     <Compile Include="Savegame\Variables\VariableBase.cs" />
+    <Compile Include="Savegame\Variables\VariableValue.cs" />
     <Compile Include="Savegame\Variables\VlVariable.cs" />
     <Compile Include="Savegame\VariableTableEntry.cs" />
     <Compile Include="Savegame\VariableParser.cs" />
