Read the name of variable blocks (BLCK)

--- a/W3SavegameEditor/W3SavegameEditor.csproj
+++ b/W3SavegameEditor/W3SavegameEditor.csproj
@@ -71,7 +71,7 @@
     <Compile Include="Savegame\Variables\VariableSet.cs" />
     <Compile Include="Savegame\SavegameFile.cs" />
     <Compile Include="Savegame\Variables\UnknownVariable.cs" />
-    <Compile Include="Savegame\Variables\VariableBase.cs" />
+    <Compile Include="Savegame\Variables\Variable.cs" />
     <Compile Include="Savegame\Variables\VariableValue.cs" />
     <Compile Include="Savegame\Variables\VlVariable.cs" />
     <Compile Include="Savegame\VariableTableEntry.cs" />
