Implemented a parser for property (PORP) variables

--- a/W3SavegameEditor/W3SavegameEditor.csproj
+++ b/W3SavegameEditor/W3SavegameEditor.csproj
@@ -61,11 +61,13 @@
     <Compile Include="Savegame\Values\W3Enum.cs" />
     <Compile Include="Savegame\VariableParsers\AvalVariableParser.cs" />
     <Compile Include="Savegame\VariableParsers\BlckVariableParser.cs" />
+    <Compile Include="Savegame\VariableParsers\PorpVariableParser.cs" />
     <Compile Include="Savegame\Variables\AvalVariable.cs" />
     <Compile Include="Savegame\Variables\BlckVariable.cs" />
     <Compile Include="Savegame\Variables\BsVariable.cs" />
     <Compile Include="Savegame\Variables\ManuVariable.cs" />
     <Compile Include="Savegame\Variables\OpVariable.cs" />
+    <Compile Include="Savegame\Variables\PorpVariable.cs" />
     <Compile Include="Savegame\Variables\SsVariable.cs" />
     <Compile Include="Savegame\Variables\TypedVariable.cs" />
     <Compile Include="Savegame\Variables\VariableSet.cs" />
