--- a/W3SavegameEditor.Core/W3SavegameEditor.Core.csproj
+++ b/W3SavegameEditor.Core/W3SavegameEditor.Core.csproj
@@ -58,11 +58,24 @@
     <Compile Include="Exceptions\ParseVariableException.cs" />
     <Compile Include="ExtensionMethods.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Savegame\CNameAttribute.cs" />
+    <Compile Include="Savegame\CTypeAttribute.cs" />
+    <Compile Include="Savegame\Values\CWitcherGameResource.cs" />
     <Compile Include="Savegame\Values\EntityHandle.cs" />
+    <Compile Include="Savegame\Values\EnvManager.cs" />
     <Compile Include="Savegame\Values\EulerAngles.cs" />
+    <Compile Include="Savegame\Values\GameProp.cs" />
+    <Compile Include="Savegame\Values\GameTime.cs" />
+    <Compile Include="Savegame\Values\Handle.cs" />
     <Compile Include="Savegame\Values\IdTag.cs" />
+    <Compile Include="Savegame\Values\IdTagManager.cs" />
+    <Compile Include="Savegame\Values\SGameplayFact.cs" />
+    <Compile Include="Savegame\Values\SGameplayFactRemoval.cs" />
     <Compile Include="Savegame\Values\TagList.cs" />
+    <Compile Include="Savegame\Values\TimerManager.cs" />
     <Compile Include="Savegame\Values\W3Enum.cs" />
+    <Compile Include="Savegame\Values\W3EnvironmentManager.cs" />
+    <Compile Include="Savegame\Values\WorldInfo.cs" />
     <Compile Include="Savegame\VariableParsers\AvalVariableParser.cs" />
     <Compile Include="Savegame\VariableParsers\BlckVariableParser.cs" />
     <Compile Include="Savegame\VariableParsers\PorpVariableParser.cs" />
