Added some more classes

--- a/W3SavegameEditor.Core/W3SavegameEditor.Core.csproj
+++ b/W3SavegameEditor.Core/W3SavegameEditor.Core.csproj
@@ -60,22 +60,47 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Savegame\CNameAttribute.cs" />
     <Compile Include="Savegame\CTypeAttribute.cs" />
+    <Compile Include="Savegame\EnumNameAttribute.cs" />
+    <Compile Include="Savegame\Values\AdditionalContent.cs" />
+    <Compile Include="Savegame\Values\EntityStateChangeRequests.cs" />
+    <Compile Include="Savegame\Values\Gwint\CollectionCard.cs" />
+    <Compile Include="Savegame\Values\Journal\CWitcherJournalManager.cs" />
+    <Compile Include="Savegame\Values\Gwint\GwintDeck.cs" />
+    <Compile Include="Savegame\Values\Gwint\GwintDeckCard.cs" />
+    <Compile Include="Savegame\Values\Gwint\GwintDecks.cs" />
+    <Compile Include="Savegame\Values\Gwint\GwintManager.cs" />
     <Compile Include="Savegame\Values\CWitcherGameResource.cs" />
-    <Compile Include="Savegame\Values\EntityHandle.cs" />
+    <Compile Include="Savegame\Values\Engine\EntityHandle.cs" />
     <Compile Include="Savegame\Values\EnvManager.cs" />
-    <Compile Include="Savegame\Values\EulerAngles.cs" />
+    <Compile Include="Savegame\Values\Engine\EulerAngles.cs" />
     <Compile Include="Savegame\Values\GameProp.cs" />
-    <Compile Include="Savegame\Values\GameTime.cs" />
-    <Compile Include="Savegame\Values\Handle.cs" />
+    <Compile Include="Savegame\Values\Engine\GameTime.cs" />
+    <Compile Include="Savegame\Values\Engine\Handle.cs" />
     <Compile Include="Savegame\Values\IdTag.cs" />
     <Compile Include="Savegame\Values\IdTagManager.cs" />
+    <Compile Include="Savegame\Values\Journal\JEntryAdvancedInfo.cs" />
+    <Compile Include="Savegame\Values\Journal\JEntryAdvancedInfoGuid.cs" />
+    <Compile Include="Savegame\Values\Journal\JHighlightedObjective.cs" />
+    <Compile Include="Savegame\Values\Journal\JHuntingClue.cs" />
+    <Compile Include="Savegame\Values\Journal\JHuntingClues.cs" />
+    <Compile Include="Savegame\Values\Journal\JMonsterKnown.cs" />
+    <Compile Include="Savegame\Values\Journal\JMonsterKnownGuid.cs" />
+    <Compile Include="Savegame\Values\Journal\JObjectiveCounter.cs" />
+    <Compile Include="Savegame\Values\Journal\JObjectiveCounters.cs" />
+    <Compile Include="Savegame\Values\Journal\JTrackedQuest.cs" />
+    <Compile Include="Savegame\Values\SaveInfo.cs" />
+    <Compile Include="Savegame\Values\SaveInfoItem.cs" />
+    <Compile Include="Savegame\Values\Gwint\CollectionSize.cs" />
+    <Compile Include="Savegame\Values\Gwint\SelectedDeckIndex.cs" />
     <Compile Include="Savegame\Values\SGameplayFact.cs" />
     <Compile Include="Savegame\Values\SGameplayFactRemoval.cs" />
     <Compile Include="Savegame\Values\TagList.cs" />
     <Compile Include="Savegame\Values\TimerManager.cs" />
+    <Compile Include="Savegame\Values\Universe.cs" />
     <Compile Include="Savegame\Values\W3Enum.cs" />
     <Compile Include="Savegame\Values\W3EnvironmentManager.cs" />
     <Compile Include="Savegame\Values\WorldInfo.cs" />
+    <Compile Include="Savegame\Values\WorldState.cs" />
     <Compile Include="Savegame\VariableParsers\AvalVariableParser.cs" />
     <Compile Include="Savegame\VariableParsers\BlckVariableParser.cs" />
     <Compile Include="Savegame\VariableParsers\PorpVariableParser.cs" />
