--- a/W3SavegameEditor.Core/W3SavegameEditor.Core.csproj
+++ b/W3SavegameEditor.Core/W3SavegameEditor.Core.csproj
@@ -58,9 +58,10 @@
     <Compile Include="Exceptions\ParseVariableException.cs" />
     <Compile Include="ExtensionMethods.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Savegame\CNameAttribute.cs" />
-    <Compile Include="Savegame\CTypeAttribute.cs" />
-    <Compile Include="Savegame\EnumNameAttribute.cs" />
+    <Compile Include="Savegame\Attributes\CArrayAttribute.cs" />
+    <Compile Include="Savegame\Attributes\CNameAttribute.cs" />
+    <Compile Include="Savegame\Attributes\CSerializableAttribute.cs" />
+    <Compile Include="Savegame\Attributes\EnumNameAttribute.cs" />
     <Compile Include="Savegame\Values\AdditionalContent.cs" />
     <Compile Include="Savegame\Values\EntityStateChangeRequests.cs" />
     <Compile Include="Savegame\Values\Gwint\CollectionCard.cs" />
@@ -88,6 +89,7 @@
     <Compile Include="Savegame\Values\Journal\JObjectiveCounter.cs" />
     <Compile Include="Savegame\Values\Journal\JObjectiveCounters.cs" />
     <Compile Include="Savegame\Values\Journal\JTrackedQuest.cs" />
+    <Compile Include="Savegame\Values\SavegameRoot.cs" />
     <Compile Include="Savegame\Values\SaveInfo.cs" />
     <Compile Include="Savegame\Values\SaveInfoItem.cs" />
     <Compile Include="Savegame\Values\Gwint\CollectionSize.cs" />
@@ -129,6 +131,7 @@
     <Compile Include="Savegame\VariableParsers\VariableParserBase.cs" />
     <Compile Include="Savegame\VariableParsers\VlVariableParser.cs" />
     <Compile Include="Savegame\VariableTypeMap.cs" />
+    <Compile Include="Savegame\VariableValueParser.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
