--- a/W3SavegameEditor.Core/W3SavegameEditor.Core.csproj
+++ b/W3SavegameEditor.Core/W3SavegameEditor.Core.csproj
@@ -64,7 +64,7 @@
     <Compile Include="Savegame\Attributes\EnumNameAttribute.cs" />
     <Compile Include="Savegame\Values\AdditionalContent.cs" />
     <Compile Include="Savegame\Values\EntityStateChangeRequests.cs" />
-    <Compile Include="Savegame\Values\Quest\ExternalDialog.cs" />
+    <Compile Include="Savegame\Values\Quests\ExternalDialog.cs" />
     <Compile Include="Savegame\Values\Fact.cs" />
     <Compile Include="Savegame\Values\FactEntry.cs" />
     <Compile Include="Savegame\Values\Facts.cs" />
@@ -93,8 +93,15 @@
     <Compile Include="Savegame\Values\Journal\JObjectiveCounter.cs" />
     <Compile Include="Savegame\Values\Journal\JObjectiveCounters.cs" />
     <Compile Include="Savegame\Values\Journal\JTrackedQuest.cs" />
-    <Compile Include="Savegame\Values\Quest\QuestExternalScenePlayer.cs" />
-    <Compile Include="Savegame\Values\Quest\QuestSystem.cs" />
+    <Compile Include="Savegame\Values\Quests\Quest.cs" />
+    <Compile Include="Savegame\Values\Quests\QuestBlock.cs" />
+    <Compile Include="Savegame\Values\Quests\QuestCondition.cs" />
+    <Compile Include="Savegame\Values\Quests\QuestConditions.cs" />
+    <Compile Include="Savegame\Values\Quests\QuestExternalScenePlayer.cs" />
+    <Compile Include="Savegame\Values\Quests\QuestExternalScenePlayers.cs" />
+    <Compile Include="Savegame\Values\Quests\QuestSystem.cs" />
+    <Compile Include="Savegame\Values\Quests\QuestThread.cs" />
+    <Compile Include="Savegame\Values\Quests\QuestThreadKeyValue.cs" />
     <Compile Include="Savegame\Values\SavegameRoot.cs" />
     <Compile Include="Savegame\Values\SaveInfo.cs" />
     <Compile Include="Savegame\Values\SaveInfoItem.cs" />
